--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
 			  <source src="http://clips.vorwaerts-gmbh.de/VfE.ogv" type="video/ogg">
 			Your browser does not support the video tag.
 			</video>
+			<div class="singleVideoContainer">
+	        	<video width="320" height="240" controls>
+				  <source src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" type="video/mp4">
+				  <source src="http://clips.vorwaerts-gmbh.de/VfE.webm" type="video/webm">
+				  <source src="http://clips.vorwaerts-gmbh.de/VfE.ogv" type="video/ogg">
+				Your browser does not support the video tag.
+				</video>
+			</div>
+        	<video width="320" height="240" controls>
+			  <source src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" type="video/mp4">
+			  <source src="http://clips.vorwaerts-gmbh.de/VfE.webm" type="video/webm">
+			  <source src="http://clips.vorwaerts-gmbh.de/VfE.ogv" type="video/ogg">
+			Your browser does not support the video tag.
+			</video>
         </div>
 
 
